--- a/views/tanda.handlebars
+++ b/views/tanda.handlebars
@@ -65,34 +65,9 @@
 
 </header>
 
-{{!-- <div id="home"> --}}
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h2>This is the Wall!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-description">Send Message</label>
-            <textarea class="form-control" id="messageTosend" aria-describedby="example-description" placeholder="Message to Send"></textarea>
-          </div>
-        </form>
-        <button id="sendMessage" class="btn btn-primary float-right">Submit</button>
-       
-        <h3>Messages:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          {{this.nombre}} says:  
-          <li data-id="{{this.idusuario}}" class="list-group-item">
-            <p>{{this.mensaje}}</p>
-            <p>{{this.createdAt}}</p>
-            {{!-- <button class="btn btn-danger float-right delete">ｘ</button> --}}
-          </li>
-          {{/each}}
-        </ul>
-      </div>
-    </div>
-  </div>
-{{!-- </div> --}}
+
+
+
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/wall.js"></script>
+<script src="/js/tanda.js"></script>
