--- a/views/wall.handlebars
+++ b/views/wall.handlebars
@@ -73,7 +73,7 @@
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="example-description">Send Message</label>
-            <textarea class="form-control" id="messageTosend" aria-describedby="example-description" placeholder="Message to Send"></textarea>
+            <textarea style="background-color:white;" class="form-control" id="messageTosend" aria-describedby="example-description" placeholder="Message to Send"></textarea>
           </div>
         </form>
         <button id="sendMessage" class="btn btn-primary float-right">Submit</button>
